crates/aion-awl/tests/fixtures/rev2/header-types/invalid/finish_gone.awl
//! Ping a host and report its status.
workflow ping_host
  input host: String
  outcome reported: type Status, route success

type Status { host: String, alive: Bool }

worker ping
  action check(host: String) -> Status

step check_host
  check(host: host) -> status
  finish reported(host: status.host, alive: status.alive)
